--- a/app/apps/release_notes/templates/public/notificaties/toast_message_item.html
+++ b/app/apps/release_notes/templates/public/notificaties/toast_message_item.html
@@ -1,16 +1,19 @@
+{% load toast_context from berichten_tags %}
+{% toast_context as context %}
 <turbo-stream action="append" target="toast_lijst">
 <template>
-    <div class="notification {{ message.tags }}"
+    <div class="notification {{ context.niveau }}"
+         {% if context.id %}id="{{ context.id }}"{% endif %}
          data-controller="notificaties--toast-item"
          data-notificaties--toast-item-niveau-value="{{ message.tags }}"
          data-notificaties--manager-target="toastItem">
         <div class="container__icon">
-            {% with "public/notificaties/icons/"|add:message.tags|add:".html" as template %}
+            {% with "public/notificaties/icons/"|add:context.niveau|add:".html" as template %}
                 {% include template %}
             {% endwith %}
         </div>
         <div class="container__content">
-            <h3>{{ message.message }}</h3>
+            <h3>{{ context.titel }}</h3>
         </div>
         <button type="button"
                 class="btn-close--small"
