mor-249: zoeken zonder filters functional

--- a/app/frontend/assets/styles/components/_filters.scss
+++ b/app/frontend/assets/styles/components/_filters.scss
@@ -12,6 +12,9 @@
             min-width: 250px;
             max-height: 2.3em;
         }
+        &.hide {
+            visibility: hidden;
+        }
 
         @media (min-width: map-get($grid-breakpoints, md)) {
             display: flex;
