--- a/app/apps/main/templates/melding/melding_lijst.html
+++ b/app/apps/main/templates/melding/melding_lijst.html
@@ -34,9 +34,10 @@
                 </span>
             </div>
             <div class="container__tools">
-                <div class="container__filter" data-filter-target="filterOverview">
-                    {{ form.foldout_states }}
-                    {{ form.limit|render_rotterdam_formulier }}
+                {{ form.foldout_states }}
+                {{ form.limit|render_rotterdam_formulier }}
+                <div class="container__filter {% if not form.search_with_profiel_context.value %}hide{% endif %}"
+                     data-filter-target="filterOverview">
                     {% for veld in form.filters %}
                         {% with foldout_name="foldout_filter-"|add:veld.name %}
                             <div class="container__multiselect{% if foldout_name in form.foldout_states.value|json_encode %} show{% endif %}">
@@ -51,7 +52,10 @@
                         {% endwith %}
                     {% endfor %}
                 </div>
-                <div class="container__search" data-filter-target="containerSearch">{{ form.q|render_rotterdam_formulier }}</div>
+                <div class="container__search" data-filter-target="containerSearch">
+                    {{ form.q|render_rotterdam_formulier }}
+                    {{ form.search_with_profiel_context|render_rotterdam_formulier }}
+                </div>
             </div>
             <div class="container__table">
                 <table class="table--overview">
