--- a/app/apps/authenticatie/templates/authenticatie/gebruiker_list.html
+++ b/app/apps/authenticatie/templates/authenticatie/gebruiker_list.html
@@ -73,7 +73,7 @@
                 </h2>
             </summary>
             <div class="container__table">
-                <table>
+                <table data-testid="niet-auth-gebruikers-tabel">
                     <thead>
                         <tr>
                             <th>E-mailadres</th>
@@ -153,7 +153,7 @@
                 </h2>
             </summary>
             <div class="container__table">
-                <table>
+                <table data-testid="auth-gebruikers-tabel">
                     <thead>
                         <tr>
                             <th>E-mailadres</th>
@@ -228,7 +228,7 @@
                 </h2>
             </summary>
             <div class="container__table">
-                <table>
+                <table data-testid="verw-gebruikers-tabel">
                     <thead>
                         <tr>
                             <th>E-mailadres</th>
