--- a/app/apps/main/templates/melding/detail/taken_aanmaken.html
+++ b/app/apps/main/templates/melding/detail/taken_aanmaken.html
@@ -7,6 +7,7 @@
     <div class="modal-content stap1"
          data-controller="taken-aanmaken--manager"
          data-taken-aanmaken--manager-afdelingen-value="{{ afdelingen|json_encode }}"
+         data-taken-aanmaken--manager-afdeling-by-url-value="{{ afdeling_by_url|json_encode }}"
          data-taken-aanmaken--manager-taaktypes-value="{{ taaktypes|json_encode }}"
          data-taken-aanmaken--manager-gebruiker-value="{{ request.user.email }}"
          data-taken-aanmaken--manager-melding-uuid-value="{{ view.kwargs.id }}">
