--- a/app/frontend/assets/styles/components/_modal.scss
+++ b/app/frontend/assets/styles/components/_modal.scss
@@ -242,9 +242,16 @@ body.show-modal--first-filter {
             flex: 0 1 auto;
         }
 
+        .modal-header {
+            padding: 0 2rem;
+        }
         .modal-body {
             flex: 1 1 auto;
             overflow-y: auto;
+            padding: 0 2rem;
+        }
+        .modal-footer {
+            padding: 1.15rem 2rem;
         }
     }
 
