Styling stap 1, checkboxes and radiobuttons

--- a/app/apps/main/templates/melding/detail/taken_aanmaken.html
+++ b/app/apps/main/templates/melding/detail/taken_aanmaken.html
@@ -47,7 +47,8 @@
                                                        data-action="taken-aanmaken--manager#taaktypeChangeHandler"
                                                        name="search"
                                                        value="search-{{ taaktype.0 }}"
-                                                       id="id_search-{{ taaktype.0 }}">
+                                                       id="id_search-{{ taaktype.0 }}"
+                                                       class="form-check-input">
                                                 <span data-row-search-target="searchable">{{ taaktype.1 }}</span>
                                             </label>
                                         </li>
