--- a/app/frontend/assets/styles/components/_incident-details.scss
+++ b/app/frontend/assets/styles/components/_incident-details.scss
@@ -56,6 +56,9 @@
             margin-right: 0;
             transform: translateY(-3px);
         }
+        input {
+            vertical-align: top;
+        }
     }
 
     &.stayFixed {
