Max number of tasks, in progress

--- a/app/frontend/assets/styles/components/_forms.scss
+++ b/app/frontend/assets/styles/components/_forms.scss
@@ -1194,4 +1194,9 @@ form.taken-aanmaken {
             }
         }
     }
+
+    .help-block {
+        font-size: 0.778rem;
+        padding-left: 4px;
+    }
 }
