--- a/app/apps/main/templates/melding/detail/taken_aanmaken.html
+++ b/app/apps/main/templates/melding/detail/taken_aanmaken.html
@@ -60,6 +60,10 @@
                             <ul data-taken-aanmaken--manager-target="geselecteerdeTaaktypesContainer"
                                 class="list__pills">
                             </ul>
+                            <div class="help-block error hidden"
+                                 data-taken-aanmaken--manager-target="geselecteerdeTakenError">
+                                <p>Je kunt maximaal 10 taken tegelijkertijd aanmaken</p>
+                            </div>
                             <div class="form-row input-labels">
                                 <div data-taakstartenformulier-target="afdelingContainer">
                                     <ul class="list--level1 form-check-input">
