--- a/app/apps/main/templates/melding/detail/taken_aanmaken.html
+++ b/app/apps/main/templates/melding/detail/taken_aanmaken.html
@@ -60,9 +60,9 @@
                             <ul data-taken-aanmaken--manager-target="geselecteerdeTaaktypesContainer"
                                 class="list__pills">
                             </ul>
-                            <div class="help-block error hidden"
+                            <div class="help-block warning hidden"
                                  data-taken-aanmaken--manager-target="geselecteerdeTakenError">
-                                <p>Je kunt maximaal 10 taken tegelijkertijd aanmaken</p>
+                                <p>Je hebt het maximum van 10 taken tegelijkertijd bereikt. Ga naar de volgende stap.</p>
                             </div>
                             <div class="form-row input-labels">
                                 <div data-taakstartenformulier-target="afdelingContainer">
