--- a/app/frontend/assets/styles/components/_modal.scss
+++ b/app/frontend/assets/styles/components/_modal.scss
@@ -255,17 +255,43 @@ body.show-modal--first-filter {
         }
     }
 
+    .stap1 div.stap1,
+    .stap2 div.stap2 {
+        transition: all $transition-duration-default $transition-ease-default;
+        opacity: 1;
+        visibility: visible;
+        display: block;
+        transition-behavior: allow-discrete;
+        transition-delay: $transition-duration-default;
+
+        @starting-style {
+            opacity: 0;
+        }
+    }
+
     .stap1 {
         .stap2 {
+            opacity: 0;
+            // transition: all $transition-duration-default $transition-ease-default;
             visibility: hidden;
             display: none;
+            transition-behavior: allow-discrete;
+            @starting-style {
+                opacity: 1;
+            }
         }
     }
 
     .stap2 {
         .stap1 {
+            opacity: 0;
+            // transition: all $transition-duration-default $transition-ease-default;
             visibility: hidden;
             display: none;
+            transition-behavior: allow-discrete;
+            @starting-style {
+                opacity: 1;
+            }
         }
     }
 
