--- a/app/apps/context/templates/benc/melding_detail_acties.html
+++ b/app/apps/context/templates/benc/melding_detail_acties.html
@@ -10,9 +10,9 @@
         {% if perms.authorisatie.taak_aanmaken and taaktypes and melding.status.naam != 'afgehandeld' and melding.status.naam != 'geannuleerd' %}
             <button type="button"
                     class="btn btn-{% if melding.status.naam == 'controle' %}tertiary{% else %}action{% endif %}"
-                    data-action="detail#openModal"
-                    data-modal-action-param="{% url 'taak_starten' melding.uuid %}">
-                <span>Start taak</span>
+                    data-action="modal#openModal"
+                    data-modal-action-param="{% url 'taken_aanmaken' melding.uuid %}">
+                <span>Taken aanmaken</span>
             </button>
         {% endif %}
         {% if perms.authorisatie.melding_afhandelen and not melding.afgesloten_op %}
