focus trap: active for taken aanmaken and melding afhandelen

--- a/app/apps/main/templates/melding/detail/taken_aanmaken.html
+++ b/app/apps/main/templates/melding/detail/taken_aanmaken.html
@@ -6,6 +6,7 @@
 <div class="modal-dialog modal-dialog--wide modal--multistep-form">
     <div class="modal-content stap1"
          data-controller="taken-aanmaken--manager"
+         data-focus-trap-target="branch"
          data-taken-aanmaken--manager-afdelingen-value="{{ afdelingen|json_encode }}"
          data-taken-aanmaken--manager-afdeling-by-url-value="{{ afdeling_by_url|json_encode }}"
          data-taken-aanmaken--manager-taaktypes-value="{{ taaktypes|json_encode }}"
