--- a/app/apps/main/templates/melding/part_melding_afhandelen.html
+++ b/app/apps/main/templates/melding/part_melding_afhandelen.html
@@ -8,7 +8,7 @@
 {% context_template "melding_afhandelen_terugkoppeling_gewenst.html" as terugkoppeling_gewenst_template %}
 <turbo-frame id="melding_actie_form">
 <div class="modal-dialog">
-    <div class="modal-content">
+    <div class="modal-content" data-focus-trap-target="branch">
         <div class="modal-header">
             <button type="button"
                     class="btn-close"
