Fix show/hide searchresultcontainer

--- a/app/apps/main/templates/melding/detail/taken_aanmaken.html
+++ b/app/apps/main/templates/melding/detail/taken_aanmaken.html
@@ -33,7 +33,7 @@
                                  data-row-search-disable-result-highlight-value="false"
                                  class="container__search form-row list--form-text-input">
                                 <input data-action="taken-aanmaken--manager#searchChangeHandler row-search#search"
-                                       data-taken-aanmaken--manager-target="search"
+                                       data-taken-aanmaken--manager-target="searchInput"
                                        type="search"
                                        class="form-control"
                                        placeholder="Zoek een taak..." />
